testsuite/bsc.typechecker/kind/TypeAliasParamGivenTooFew.bs.bsc-out.expected
checking package dependencies
compiling TypeAliasParamGivenTooFew.bs
Error: "TypeAliasParamGivenTooFew.bs", line 3, column 6: (T0024)
  The type `Foo' is applied to too many arguments.
