testsuite/bsc.typechecker/kind/TypeAliasParamGivenTooFew.bs
package TypeAliasParamGivenTooFew () where

type (Foo :: * -> *) a b = Tuple2 a b

